Updated dets to arm threads